Fixed the date in booking cards alignment

--- a/sass/partials/_elements.scss
+++ b/sass/partials/_elements.scss
@@ -34,6 +34,8 @@
 }
 
 .tenex_image {
+  min-height: 100vh;
+  background-color: #DCEBE9;
   img {
     width: 100%;
   }
