--- a/sass/partials/_reset.scss
+++ b/sass/partials/_reset.scss
@@ -26,8 +26,9 @@ html {
 
 body {
   margin: 0 auto;
-  max-width: 450px;
-  // position: relative;
+  background-color: #f4f4f4;
+  max-width: 515px;
+  min-height: 100vh;
 }
 
 /**
