--- a/style.css
+++ b/style.css
@@ -85,7 +85,9 @@ html {
    */
 body {
   margin: 0 auto;
-  max-width: 450px;
+  background-color: #f4f4f4;
+  max-width: 515px;
+  min-height: 100vh;
 }
 
 /**
@@ -868,6 +870,17 @@ a {
 ******************************************************************************/
 /* 5. Posts and Pages ====================================================== */
 /******************************************************************************
+        Onboarding screen starts here
+******************************************************************************/
+.index_main {
+  min-height: 100vh;
+  background-color: #fff;
+}
+
+/******************************************************************************
+        Onboarding screen ends here
+******************************************************************************/
+/******************************************************************************
         Alert card home screen starts here
 ******************************************************************************/
 .notification_home_header,
@@ -877,6 +890,7 @@ a {
   position: -webkit-sticky;
   position: sticky;
   top: 0;
+  z-index: 10;
   padding: 1rem 0 0.875rem;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1205,11 +1219,10 @@ a {
 }
 
 .newRequestCard_wrapper {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: auto auto;
-      grid-template-columns: auto auto;
-  grid-gap: 0.5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 0.5rem;
 }
 
 .newRequestCard_content_wrapper {
@@ -1218,7 +1231,7 @@ a {
   -ms-grid-columns: 0.5rem auto;
       grid-template-columns: 0.5rem auto;
   grid-gap: 0.25rem 1rem;
-  width: 14rem;
+  width: calc(100% - 70px);
 }
 
 .newRequestCard_status_progress_wrapper {
@@ -1259,6 +1272,7 @@ a {
 
 .newRequestCard_date_wrapper {
   height: 93px;
+  width: 70px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1277,10 +1291,10 @@ a {
 
 .newBookingCard_date_for {
   position: absolute;
-  top: 20%;
-  left: 46%;
-  right: 55%;
-  bottom: 80%;
+  top: 21%;
+  left: 42%;
+  right: 58%;
+  bottom: 79%;
   text-align: center;
   height: 0;
 }
@@ -2006,7 +2020,7 @@ svg {
 .message-container .name {
   display: inline-block;
   width: 100%;
-  color: #3F6E6A;
+  color: #3f6e6a;
   font-weight: 600;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -2125,15 +2139,15 @@ svg {
   margin: 0;
 }
 
-.calendar_header .topHeader input[type=date] {
+.calendar_header .topHeader input[type="date"] {
   color: #828282;
   font-family: "SFProDisplayRegular";
   border-radius: 1rem;
-  border: 1px solid #DDDDDD;
+  border: 1px solid #dddddd;
   padding: 0.25rem 0.25rem 0.25rem 0.5rem;
 }
 
-.calendar_header .topHeader input[type=date]::-webkit-calendar-picker-indicator::before {
+.calendar_header .topHeader input[type="date"]::-webkit-calendar-picker-indicator::before {
   opacity: 1;
   background-image: url('data:image/svg+xml;charset=utf8,%3Csvg width="18" height="22" viewBox="0 0 18 22" fill="none" xmlns="http://www.w3.org/2000/svg"%3E%3Cpath d="M16 2.62727H15V0.510254H13V2.62727H5V0.510254H3V2.62727H2C0.89 2.62727 0.00999999 3.57992 0.00999999 4.74428L0 19.5634C0 20.7277 0.89 21.6804 2 21.6804H16C17.1 21.6804 18 20.7277 18 19.5634V4.74428C18 3.57992 17.1 2.62727 16 2.62727ZM16 19.5634H2V7.91979H16V19.5634ZM4 10.0368H9V15.3293H4V10.0368Z" fill="#333333"/%3E%3C/svg%3E');
 }
@@ -2345,9 +2359,8 @@ button:focus {
         More style starts here
 ******************************************************************************/
 .body_more {
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
-  background-color: #f4f4f4;
   color: #4f4f4f;
 }
 
@@ -2462,9 +2475,8 @@ button:focus {
         Regulations style starts here
 ******************************************************************************/
 .body_regulations {
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
-  background-color: white;
   color: #4f4f4f;
   font-family: "roboto", sans-serif;
 }
@@ -2505,8 +2517,10 @@ button:focus {
 }
 
 .body_regulations main {
-  padding: 1rem 0.5rem 2.5rem 0.5rem;
+  padding: 1.5rem 1rem 2.5rem 1rem;
   margin: auto;
+  min-height: 100vh;
+  background: white;
 }
 
 .body_regulations #back_btn {
@@ -2612,7 +2626,7 @@ button:focus {
   transition: -webkit-box-flex 0.3s ease-out;
   transition: flex 0.3s ease-out;
   transition: flex 0.3s ease-out, -webkit-box-flex 0.3s ease-out, -ms-flex 0.3s ease-out;
-  border: 1px solid #E0E0E0;
+  border: 1px solid #e0e0e0;
   background-color: white;
   -webkit-box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.12);
           box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.12);
@@ -2707,12 +2721,15 @@ button:focus {
   -webkit-box-direction: normal;
       -ms-flex-flow: column nowrap;
           flex-flow: column nowrap;
-  gap: 1rem;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   margin-top: 4rem;
   width: 100%;
+}
+
+.tenexform form label:last-child {
+  margin-top: 1rem;
 }
 
 .tenexform #loginForm label {
@@ -2798,6 +2815,11 @@ button:focus {
 
 .btn_to_login button:disabled {
   opacity: 0.5;
+}
+
+.tenex_image {
+  min-height: 100vh;
+  background-color: #DCEBE9;
 }
 
 .tenex_image img {
